# Research-gap-discovery-with-production-scenario-agent-

./: .$DFD1.drawio.bkp  .$DFD2.drawio.bkp  .$DFD3.drawio.bkp  .gitignore  DETAILED_DFD.txt  DFD1.drawio  DFD2.drawio  DFD3.drawio  PROJECT_DFD.md  README.md  Tech_stack.txt  app.py  log.txt  pyproject.toml  requirements.txt  run_app.bat
.devin/: config.local.json
Research gap agent/: Research Gap Pipeline - Obsidian.md
Research gap agent/.obsidian/: workspace.json
src/research_gap_agent/: __init__.py
src/research_gap_agent/Ingestion/: __init__.py  embedder.py  parser.py  pdf_ingestion.py  pinecone_upsert.py  semantic_chunker.py
src/research_gap_agent/graphs/: __init__.py  basic_qa_graph.py
src/research_gap_agent/llm/: factory.py  oss120B.py  oss20B.py
src/research_gap_agent/nodes/: generator.py  mindmap_node.py  retrieval.py  web_search.py
src/research_gap_agent/services/: jina_service.py  tavily_service.py
src/research_gap_agent/state/: __init__.py  state.py
src/research_gap_agent/ui/: __init__.py  chat.py  uploader.py
src/research_gap_agent/utils/: __init__.py  file_store.py
